--- a/front/detail_product_pages/Detalle_Comic_X-Men.html
+++ b/front/detail_product_pages/Detalle_Comic_X-Men.html
@@ -22,25 +22,28 @@
             <a class="navbar-logo" href="#">
                 <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
-            <ul class="nav-op">                        
+            <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="#">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="/index.html">INICIO</a>
+                </li>                        
+                <li class="new-li">
+                    <a class="nav-link" href="/front/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">PRODUCTOS</a>
+                    <a class="nav-link" href="/front/marvelProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">CONTACTO</a>
+                    <a class="nav-link" href="/index.html">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">INGRESAR</a>
+                    <a class="nav-link" href="/login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">REGISTRO</a>
+                    <a class="nav-link" href="/registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
-    </header>        
+    </header>       
     
     <div class="card-wrapper">
         <div class="card">
