--- a/front/pages/detail_product_pages/Detalle_Comic_X-Men.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_X-Men.html
@@ -30,16 +30,16 @@
                     <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/marvelProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">CONTACTO</a>
+                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/login.html">INGRESAR</a>
+                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
