--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Superheroes</title>
-    <link rel="icon" href="/front/images/logo_planet - favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="front/css/style.css" />
+    <link rel="icon" href="/front/images/logo_planet.png" type="image/x-icon">
+
     <script
       src="https://kit.fontawesome.com/6ff66d206f.js"
       crossorigin="anonymous"
