--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reseñas</title>
+    <title>RESEÑA</title>
     <style>
-        /* Estilo para el cuerpo (body) */
-        body {
-            background-color: #852424; /* Cambia el color de fondo del body a gris claro */
+ /* Estilos para las columnas */
+         /* Estilo para el cuerpo (body) */
+         body {
+            background-color: #9A1515; /* Cambia el color de fondo del body a gris claro */
+            .review-title h1 {
+    color: #E5AC57; /* Cambia "blue" al color que desees */
+}
+
         }
 
         /* Estilos para las columnas */
@@ -16,8 +21,8 @@
             width: 23%; /* Ancho de cada columna */
             margin: 1%;
             padding: 10px;
-            background-color: #f3f0f0; /* Color de fondo de las columnas */
-            border: 1px solid #120000;
+            background-color: #ffffff; /* Color de fondo de las columnas */
+            border: 5px solid #000000;
             box-sizing: border-box;
         }
 
@@ -33,20 +38,26 @@
             text-align: center;
             font-size: 24px;
             margin-bottom: 20px;
+            
         }
 
         /* Estilo para los nombres */
         .column h2 {
             display: inline-block; /* Muestra los nombres en la misma línea que las imágenes */
             margin-left: 10px; /* Agrega un margen izquierdo para separar la imagen del nombre */
+.review-title h1 {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifs; /* Cambia "Arial, sans-serif" a la fuente que desees */
+           font-size: 24px; /* Cambia "24px" al tamaño de fuente deseado */
+           font-weight: bold; /* Puedes ajustar el grosor de la fuente si lo deseas */
+          /* Otros estilos de fuente, como color, se pueden aplicar aquí */
+}
         }
     </style>
-</head>
+    </head>
 <body>
-
-<div class="review-title">
-    <h1>Reseñas</h1>
-</div>
+    <div class="review-title">
+        <h1>RESEÑA</h1>
+    </div>
 
 <div class="column">
     <img src="imagenes/prueba 5/5 estrellas.png" alt="">
@@ -77,3 +88,4 @@
 
 </body>
 </html>
+
